# dash

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.sample.toml  flake.nix  nx.json  package.json  pnpm-lock.yaml  sample.app.toml  sample.config.toml  tailwind.config.js
.cargo/: config.toml
.github/workflows/: build.yml  rust-lint.yml  rust.yml
api/: project.json
api/src/db/: connection.rs  user.rs
api/src/services/: mod.rs  router.rs  users.rs
apps/api/: Cargo.toml  project.json
apps/api/proto/: api.proto
apps/api/src/: main.rs
apps/dash/: .eslintrc.json  postcss.config.js  project.json  tailwind.config.js  tsconfig.json
apps/dash-e2e/: playwright.config.ts  project.json
apps/dash/app/: layout.tsx  page.tsx
apps/dash/components/nav-bar/: nav-bar.tsx
apps/dash/components/root-layout/: root-layout.tsx
apps/frontend/: astro.config.mjs  bun.lockb  package.json
apps/graphql-mesh/: README.md  bun.lockb  package.json
proto/: api.proto  users.proto
src/: configs.rs  main.rs
src/db/: connection.rs  user.rs
src/routes/: mod.rs  router.rs  users.rs
src/services/: grpc.rs  mod.rs  router.rs  users.rs
web/: .eslintrc.json  package.json  project.json  svelte.config.js  tailwind.config.cjs
web-e2e/: playwright.config.ts  project.json
web/app/: layout.tsx  page.tsx
web/components/nav-bar/: nav-bar.tsx
web/components/root-layout/: root-layout.tsx
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/auth/: +page.svelte
web/src/routes/dash/: +page.svelte
