[package]
name = "dash"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["http2", "tracing"] }
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
libreauth = "0.16.0"
serde = { version = "1.0.175", features = ["serde_derive"] }
serde_derive = "1.0.175"
tokio = { version = "1.29.1", features = ["full"] }
tonic = "0.9.2"
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

