[package]
name = "dash"
version = "0.5.0"
edition = "2021"


[dependencies]
# anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["http2", "tracing"] }
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
# libreauth = "0.16.0"
prost = "0.11.9"
serde = { version = "1.0.175", features = ["serde_derive", "derive"] }
serde-email = "3.0.0"
serde_derive = "1.0.175"
serde_json = "1.0.104"
surrealdb = "1.0.0-beta.9" 
tokio = { version = "1.29.1", features = ["full", "macros", "rt-multi-thread"] }
tonic = "0.9.2"
tonic-reflection = "0.9.2"
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v7"] }
validator = { version = "0.16.1", features = ["validator_derive", "derive"] }

[build-dependencies]
tonic-build = "0.9.2"
